--- a/nginx-ssl.conf
+++ b/nginx-ssl.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name schedulemeet.lemomate.com;
-    
+
     # 重定向到HTTPS
     return 301 https://$host$request_uri;
 }
@@ -9,11 +9,11 @@ server {
 server {
     listen 443 ssl;
     server_name schedulemeet.lemomate.com;
-    
+
     # SSL配置
     ssl_certificate /etc/letsencrypt/live/schedulemeet.lemomate.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/schedulemeet.lemomate.com/privkey.pem;
-    
+
     # 其他SSL设置
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -21,17 +21,10 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 1d;
     ssl_session_tickets off;
-    
+
     # 前端应用
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
-    }
-    
-    # API请求
-    location /api {
-        proxy_pass http://backend:8085;
+        proxy_pass http://localhost:8080;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
