--- a/nginx-direct.conf
+++ b/nginx-direct.conf
@@ -1,24 +1,15 @@
 server {
     listen 80;
     server_name schedulemeet.lemomate.com;
-
-    # 静态资源缓存
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        root /usr/share/nginx/html;
-        expires 1y;
-        add_header Cache-Control "public";
-        access_log off;
-        try_files $uri =404;
-    }
-
+    
     location / {
-        root /usr/share/nginx/html;
+        root /path/to/lemomate/frontend/dist;  # 替换为实际的前端构建目录路径
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-
+    
     location /api {
-        proxy_pass http://backend:8085;
+        proxy_pass http://localhost:8085;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
