--- a/nginx-ssl.conf
+++ b/nginx-ssl.conf
@@ -22,6 +22,18 @@ server {
     ssl_session_timeout 1d;
     ssl_session_tickets off;
 
+    # 添加缓存控制
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        proxy_pass http://localhost:8089;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        expires 1y;
+        add_header Cache-Control "public";
+        access_log off;
+    }
+
     # 前端应用
     location / {
         proxy_pass http://localhost:8089;
@@ -29,5 +41,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # 确保单页应用路由正常工作
+        try_files $uri $uri/ /index.html;
     }
 }
