--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name meet.lemomate.com;
+    server_name schedulemeet.lemomate.com;
 
     # 将HTTP请求重定向到HTTPS
     location / {
@@ -10,7 +10,7 @@ server {
 
 server {
     listen 443 ssl;
-    server_name meet.lemomate.com;
+    server_name schedulemeet.lemomate.com;
 
     # SSL证书配置
     ssl_certificate /etc/nginx/ssl/cert.pem;
